# codex-api-gateway

./: .gitignore  ANTHROPIC_GATEWAY_NOTES.md  ANTHROPIC_TOOL_USE_INVESTIGATION_PLAN.md  BUILD.md  Cargo.toml  HARDENING_PLAN.md  README.md  SECURITY.md  THREAT_MODEL.md
.github/workflows/: ci.yml
scripts/: debug_claude_tool_use.sh
src/: main.rs  streaming.rs  tests.rs
